--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "scripty",
     "test:nolint": "TEST_NOLINTING=1 npm run test",
     "i18n": "npm-run-all -s build i18n:extract i18n:merge i18n:build",
-    "i18n:extract": "./node_modules/.bin/extract-pot --template-engine=Jinja --template-file-ext=html --locale=src/locale/ dist/",
+    "i18n:extract": "scripty",
     "i18n:merge": "./node_modules/i18n-abide/bin/merge-po.sh src/locale/",
     "i18n:build": "mkdir -p ./dist/i18n && ./node_modules/i18n-abide/bin/compile-json ./src/locale/ ./dist/i18n",
     "i18n:watch": "watch 'npm run i18n:build' src/locale/",
@@ -138,6 +138,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "expose-loader": "^0.7.5",
     "file-loader": "^5.1.0",
+    "gettext-extractor": "^3.5.2",
     "htmlhint": "^0.11.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
