--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
     "plugins": [
         "@typescript-eslint"
     ],
-    "ignorePatterns": ["node_modules/", "dist/", "webpack.config.js"],
+    "ignorePatterns": ["node_modules/", "dist/", "webpack.config.js", "jquery"],
     "rules": {
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-floating-promises": "error",
