--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "resolve-url-loader": "^3.1.1",
     "rimraf": "^3.0.2",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
