--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "dev:build": "NODE_ENV=development npm run common:build",
     "common:build": "npm-run-all -s clean -p public:build html:build tsc:build i18n:build",
     "public:build": "webpack --config webpack.config.js",
-    "html:build": "cp-cli src/views/ dist/views/",
+    "html:build": "cp-cli src/views/ dist/views/ && cp-cli src/shared/templates/ dist/views/shared/templates/",
     "tsc:build": "if [ \"$NODE_ENV\" = 'production' ]; then tsc; else tsc --sourcemap; fi",
     "common:start": "node .",
     "dev:start": "NODE_ENV=development nodemon --watch dist -e js,html,css,json,png --delay 2 --exec npm run common:start",
     "dev": "NODE_ENV=development npm-run-all -s clean dev:build -p public:watch tsc:watch html:watch dev:start i18n:watch",
     "public:watch": "npm run public:build -- --watch",
     "tsc:watch": "tsc --watch",
-    "html:watch": "watch 'npm run html:build' src/views/",
+    "html:watch": "watch 'npm run html:build' src/views/ src/shared/templates/",
     "start": "NODE_ENV=production npm-run-all -s build common:start",
     "test": "scripty",
     "test:nolint": "TEST_NOLINTING=1 npm run test",
@@ -148,6 +148,7 @@
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "resolve-url-loader": "^3.1.1",
     "rimraf": "^3.0.2",
