--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/config": "0.0.36",
     "@types/connect-redis": "0.0.13",
     "@types/cookie-parser": "^1.4.2",
@@ -125,6 +126,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-match": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "cp-cli": "^2.0.0",
