--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-typescript": "^7.8.3",
-    "@dcdeiv/simpler-sidebar": "^2.2.6",
+    "@ctrlmaniac/simpler-sidebar": "^2.4.1",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
