--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,11 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 2018,
-        "project": [ "./tsconfig.json", "./src/public/js/tsconfig.json", "./tests/tsconfig.json" ]
+        "project": [
+            "./tsconfig.json",
+            "./src/public/js/tsconfig.json",
+            "./tests/tsconfig.json"
+        ]
     },
     "plugins": [
         "@typescript-eslint"
@@ -25,6 +29,13 @@
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-floating-promises": "error",
         "@typescript-eslint/no-misused-promises": "error",
+        "max-len": [
+          "error",
+          {
+            "code": 120,
+            "comments": 120
+          }
+        ],
         "no-unused-vars": "off"
     }
 }
