--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "core-js": "^3.6.4",
     "crypto-random-string": "^3.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "express-http-context": "^1.2.3",
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
