--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "i18n": "npm-run-all -s build i18n:extract i18n:merge i18n:build",
     "i18n:extract": "scripty",
     "i18n:merge": "./node_modules/i18n-abide/bin/merge-po.sh src/locale/",
-    "i18n:build": "mkdir -p ./dist/i18n && ./node_modules/i18n-abide/bin/compile-json ./src/locale/ ./dist/i18n",
+    "i18n:build": "# mkdir -p ./dist/i18n && ./node_modules/i18n-abide/bin/compile-json ./src/locale/ ./dist/i18n",
     "i18n:watch": "watch 'npm run i18n:build' src/locale/",
     "database:sync:launch": "NODE_ENV=production node ./dist/scripts/database-sync.js",
     "dev:database:sync": "NODE_ENV=development npm-run-all -s clean dev:build dev:database:sync:launch",
@@ -55,6 +55,7 @@
     "@babel/polyfill": "^7.8.7",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "ci": "^1.0.0",
     "config": "^3.3.0",
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.5",
@@ -65,7 +66,8 @@
     "express-http-context": "^1.2.3",
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
-    "i18n-abide": "0.0.26",
+    "i18next": "^19.7.0",
+    "i18next-http-middleware": "^3.0.6",
     "is-invalid-path": "^1.0.2",
     "js-logger": "^1.6.0",
     "js-yaml": "^3.13.1",
@@ -103,7 +105,6 @@
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.17.0",
     "@types/express-socket.io-session": "^1.3.2",
-    "@types/i18n-abide": "0.0.1",
     "@types/jquery": "^3.3.33",
     "@types/jqueryui": "^1.12.10",
     "@types/js-yaml": "^3.12.2",
@@ -141,8 +142,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "expose-loader": "^0.7.5",
     "file-loader": "^5.1.0",
-    "gettext-extractor": "^3.5.2",
     "htmlhint": "^0.11.0",
+    "i18next-http-backend": "^1.0.21",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "mini-css-extract-plugin": "^0.9.0",
