Using "npx tsc" instead of "tsc".

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "common:build": "npm-run-all -s clean -p public:build html:build tsc:build i18n:build",
     "public:build": "webpack --config webpack.config.js",
     "html:build": "cp-cli src/views/ dist/views/ && cp-cli src/shared/templates/ dist/views/shared/templates/",
-    "tsc:build": "if [ \"$NODE_ENV\" = 'production' ]; then tsc; else tsc --sourcemap; fi",
+    "tsc:build": "if [ \"$NODE_ENV\" = 'production' ]; then npx tsc; else npx tsc --sourcemap; fi",
     "common:start": "node .",
     "dev:start": "NODE_ENV=development nodemon --watch dist -e js,html,css,json,png --delay 2 --exec npm run common:start",
     "dev": "NODE_ENV=development npm-run-all -s clean dev:build -p public:watch tsc:watch html:watch dev:start i18n:watch",
     "public:watch": "npm run public:build -- --watch",
-    "tsc:watch": "tsc --watch",
+    "tsc:watch": "npx tsc --watch",
     "html:watch": "watch 'npm run html:build' src/views/ src/shared/templates/",
     "start": "NODE_ENV=production npm-run-all -s build common:start",
     "test": "scripty",
