--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "file-loader": "^5.1.0",
     "htmlhint": "^0.11.0",
     "i18next-http-backend": "^1.0.21",
+    "i18next-parser": "^3.6.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "mini-css-extract-plugin": "^0.9.0",
