i18next for frontend.

--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "start": "NODE_ENV=production npm-run-all -s build common:start",
     "test": "scripty",
     "test:nolint": "TEST_NOLINTING=1 npm run test",
-    "i18n": "npm-run-all -s build i18n:extract i18n:merge i18n:build",
-    "i18n:extract": "scripty",
-    "i18n:merge": "./node_modules/i18n-abide/bin/merge-po.sh src/locale/",
-    "i18n:build": "# mkdir -p ./dist/i18n && ./node_modules/i18n-abide/bin/compile-json ./src/locale/ ./dist/i18n",
-    "i18n:watch": "watch 'npm run i18n:build' src/locale/",
+    "i18n": "npm-run-all -s build i18n:extract i18n:build",
+    "i18n:extract": "npx i18next",
+    "i18n:build": "cp-cli src/locales/ dist/i18n/",
+    "i18n:watch": "watch 'npm run i18n:build' src/locales/",
     "database:sync:launch": "NODE_ENV=production node ./dist/scripts/database-sync.js",
     "dev:database:sync": "NODE_ENV=development npm-run-all -s clean dev:build dev:database:sync:launch",
     "dev:database:sync:launch": "NODE_ENV=development node ./dist/scripts/database-sync.js",
