--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
     "i18next": "^19.7.0",
+    "i18next-fs-backend": "^1.0.8",
     "i18next-http-middleware": "^3.0.6",
     "is-invalid-path": "^1.0.2",
     "js-logger": "^1.6.0",
