--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.17.0",
     "@types/express-socket.io-session": "^1.3.2",
+    "@types/i18next-fs-backend": "^1.0.0",
     "@types/jquery": "^3.3.33",
     "@types/jqueryui": "^1.12.10",
     "@types/js-yaml": "^3.12.2",
