--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "NODE_ENV=production npm-run-all -s build common:start",
     "test": "scripty",
     "test:nolint": "TEST_NOLINTING=1 npm run test",
-    "i18n:extract": "npx i18next",
+    "i18n:extract": "npx i18next -c .i18next-parser.config.js",
     "i18n:build": "cp-cli src/locales/ dist/i18n/",
     "i18n:watch": "watch 'npm run i18n:build' src/locales/",
     "database:sync:launch": "NODE_ENV=production node ./dist/scripts/database-sync.js",
