tsconfig for public js.

--- a/src/public/js/tsconfig.json
+++ b/src/public/js/tsconfig.json
@@ -10,6 +10,10 @@
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
-		"outDir": "../../../dist/public/js"
+		"outDir": "../../../dist/public/js",
+		"baseUrl": ".",
+		"paths": {
+			"shared/*": ["../../shared/*"]
+		}
 	}
 }
