Work to allow non-relative imports/requires:
* npm tsc:build: always produce sourceMap, even in production
* use of @tsconfig/node12
* webpack: adding a «bop» alias
* use of tsconfig-path for backend code to use tsconfig paths
* rewrite of tsconfig.json files (front and backend)
* From now, backend can import with absolute paths like bop/helpers/...
* From now, frontend can import shared modules with bop/shared/...

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -3,7 +3,7 @@
   "spec": [
     "./tests/index.ts"
   ],
-  "require": "ts-node/register",
+  "require": ["ts-node/register", "tsconfig-paths/register"],
   "bail": true,
   "exit": true
 }
