--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "common:build": "npm-run-all -s clean -p public:build html:build tsc:build i18n:build",
     "public:build": "webpack --config webpack.config.js",
     "html:build": "cp-cli src/views/ dist/views/ && cp-cli src/shared/templates/ dist/views/shared/templates/",
-    "tsc:build": "if [ \"$NODE_ENV\" = 'production' ]; then npx tsc; else npx tsc --sourcemap; fi",
+    "tsc:build": "npx tsc",
     "common:start": "node .",
     "dev:start": "NODE_ENV=development nodemon --watch dist -e js,html,css,json,png --delay 2 --exec npm run common:start",
     "dev": "NODE_ENV=development npm-run-all -s clean dev:build -p public:watch tsc:watch html:watch dev:start i18n:watch",
@@ -77,11 +77,13 @@
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.3",
+    "require-json5": "^1.1.0",
     "sequelize": "^5.21.5",
     "sequelize-typescript": "^1.1.0",
     "socket.io": "^2.4.1",
     "socket.io-emitter": "^3.1.1",
     "socket.io-redis": "^5.2.0",
+    "tsconfig-paths": "^3.9.0",
     "uid2": "0.0.3",
     "uuid": "^7.0.3",
     "winston": "^3.2.1",
@@ -92,6 +94,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.8.3",
     "@ctrlmaniac/simpler-sidebar": "^2.4.1",
+    "@tsconfig/node12": "^1.0.7",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
