--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,31 @@
 {
+	"extends": "@tsconfig/node12/tsconfig.json",
 	"compilerOptions": {
-		"target": "es6",
 		"experimentalDecorators": true, // Needed for sequelize-typescript
 		"emitDecoratorMetadata": true, // Needed for sequelize-typescript
-		"module": "commonjs",
+
+		// FIXME: @tsconfig/node12 recommands to set esModuleInterop to true. Requires rewrite of some imports.
+		"esModuleInterop": false,
+
 		"moduleResolution": "node", // Tell tsc to look in node_modules for modules
-		"strict": true,
-		"alwaysStrict": true,
-		"forceConsistentCasingInFileNames": true,
-		"noImplicitAny": true,
+		"strict": true, // That implies alwaysStrict, noImplicitAny, noImplicitThis
+
+		"alwaysStrict": true, // should already be true because of strict:true
+		"noImplicitAny": true, // should already be true because of strict:true
+		"noImplicitThis": true, // should already be true because of strict:true
 		"noImplicitReturns": true,
+		"strictBindCallApply": true, // should already be true because of strict:true
 		"noUnusedLocals": true,
+
+		"removeComments": true,
+		"sourceMap": true,
+
+		"rootDir": "src",
 		"outDir": "dist",
-		"baseUrl": ".",
+		"baseUrl": "./src/",
 		"paths": {
-			"*": ["node_modules/*"]
+			"*": ["../node_modules/*"],
+			"bop/*": ["*"]
 		}
 	},
 	"include": ["src/**/*"],
