Adding ts path and alias for bop/public.

--- a/src/public/js/tsconfig.json
+++ b/src/public/js/tsconfig.json
@@ -15,6 +15,7 @@
 		"outDir": "../../../dist/public/js",
 		"baseUrl": ".",
 		"paths": {
+			"bop/public/*": ["../*"],
 			"bop/shared/*": ["../../shared/*"]
 		}
 	},
