Removing deprecated dependency: cp-cli.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev:build": "NODE_ENV=development npm run common:build",
     "common:build": "npm-run-all -s clean -p public:build html:build tsc:build i18n:build",
     "public:build": "webpack --config webpack.config.js",
-    "html:build": "cp-cli src/views/ dist/views/ && cp-cli src/shared/templates/ dist/views/shared/templates/",
+    "html:build": "scripty",
     "tsc:build": "npx tsc",
     "common:start": "node .",
     "dev:start": "NODE_ENV=development nodemon --watch dist -e js,html,css,json,png --delay 2 --exec npm run common:start",
@@ -26,7 +26,7 @@
     "test": "scripty",
     "test:nolint": "TEST_NOLINTING=1 npm run test",
     "i18n:extract": "npx i18next -c .i18next-parser.config.js",
-    "i18n:build": "cp-cli src/locales/ dist/i18n/",
+    "i18n:build": "cp -r src/locales/ dist/i18n/",
     "i18n:watch": "watch 'npm run i18n:build' src/locales/",
     "database:sync:launch": "NODE_ENV=production node ./dist/scripts/database-sync.js",
     "dev:database:sync": "NODE_ENV=development npm-run-all -s clean dev:build dev:database:sync:launch",
@@ -131,7 +131,6 @@
     "chai-as-promised": "^7.1.1",
     "chai-match": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
-    "cp-cli": "^2.0.0",
     "css-loader": "^3.6.0",
     "dependency-cruiser": "^9.22.1",
     "eslint": "^7.19.0",
