--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "homepage": "https://github.com/JohnXLivingston/bop#readme",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "async": "^3.2.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.3",
@@ -59,7 +60,6 @@
     "core-js": "^3.8.3",
     "crypto-random-string": "^3.3.0",
     "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
     "express-http-context": "^1.2.4",
     "express-session": "^1.17.1",
     "express-socket.io-session": "^1.3.5",
@@ -95,6 +95,7 @@
     "@babel/preset-typescript": "^7.12.13",
     "@ctrlmaniac/simpler-sidebar": "^2.4.1",
     "@tsconfig/node12": "^1.0.7",
+    "@types/async": "^3.2.5",
     "@types/bcrypt": "^3.0.0",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
