--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
         "jquery": true
     },
     "extends": [
-        "standard"
+        "standard-with-typescript"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -30,6 +30,11 @@
         "@typescript-eslint/no-unused-vars": [2, {"argsIgnorePattern": "^_"}],
         "@typescript-eslint/no-floating-promises": "error",
         "@typescript-eslint/no-misused-promises": "error",
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/return-await": [2, "in-try-catch"], // FIXME: correct?
+        "@typescript-eslint/no-invalid-void-type": "off",
+        "@typescript-eslint/triple-slash-reference": "off",
         "max-len": [
           "error",
           {
