--- a/package.json
+++ b/package.json
@@ -123,8 +123,8 @@
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "@types/winston-syslog": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "assets-webpack-plugin": "^5.1.2",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -136,6 +136,7 @@
     "dependency-cruiser": "^9.22.1",
     "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
