--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist/*",
     "lint": "npm-run-all -s config:lint sass:lint tsc:lint dependencies:lint",
     "config:lint": "yamllint config/**/*.yaml",
-    "sass:lint": "sass-lint --verbose",
+    "sass:lint": "stylelint 'src/**/*.scss'",
     "tsc:lint": "eslint --ext .ts ./src ./src/public ./tests/",
     "build": "NODE_ENV=production npm run common:build",
     "dev:build": "NODE_ENV=development npm run common:build",
@@ -158,10 +158,13 @@
     "optimize-css-assets-webpack-plugin": "^5.0.8",
     "resolve-url-loader": "^3.1.4",
     "rimraf": "^3.0.2",
-    "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
     "scripty": "^2.0.0",
     "socket.io-client": "^2.4.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.5",
     "watch": "^1.0.2",
