--- a/package.json
+++ b/package.json
@@ -125,14 +125,15 @@
     "@types/winston-syslog": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
-    "assets-webpack-plugin": "^5.1.2",
+    "assets-webpack-plugin": "^7.1.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-match": "^1.1.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "dependency-cruiser": "^9.26.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
@@ -141,24 +142,24 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^5.1.0",
+    "expose-loader": "^3.0.0",
+    "file-loader": "^6.2.0",
     "htmlhint": "^0.14.2",
     "i18next-http-backend": "^1.3.0",
     "i18next-multiload-backend-adapter": "^1.0.0",
     "i18next-parser": "^3.11.0",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^2.2.0",
     "mocha": "^8.4.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "nunjucks-loader": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.8",
-    "resolve-url-loader": "^3.1.4",
+    "postcss": "^8.3.6",
+    "resolve-url-loader": "^4.0.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^12.1.0",
     "scripty": "^2.0.0",
     "socket.io-client": "^2.4.0",
     "stylelint": "^13.13.1",
@@ -168,7 +169,7 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5",
     "watch": "^1.0.2",
-    "webpack": "^4.46.0",
+    "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "yaml-lint": "^1.2.4"
   }
