--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "socket.io-emitter": "^3.2.0",
     "socket.io-redis": "^5.2.0",
     "tsconfig-paths": "^3.11.0",
-    "uid2": "0.0.3",
+    "uid2": "^1.0.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-syslog": "^2.4.4"
