--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "homepage": "https://github.com/JohnXLivingston/bop#readme",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@socket.io/redis-adapter": "^7.0.0",
     "@socket.io/redis-emitter": "^4.1.0",
     "async": "^3.2.1",
     "bcrypt": "^5.0.1",
@@ -82,7 +83,6 @@
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
     "socket.io": "^2.4.1",
-    "socket.io-redis": "^5.2.0",
     "tsconfig-paths": "^3.11.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
@@ -116,7 +116,6 @@
     "@types/redis": "^2.8.31",
     "@types/socket.io": "^2.1.13",
     "@types/socket.io-client": "^1.4.36",
-    "@types/socket.io-redis": "^1.0.27",
     "@types/uuid": "^8.3.1",
     "@types/validator": "^13.6.3",
     "@types/winston-syslog": "^2.0.4",
