--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "tsc:lint": "eslint --ext .ts ./src ./src/public ./tests/",
     "build": "NODE_ENV=production npm run common:build",
     "dev:build": "NODE_ENV=development npm run common:build",
-    "common:build": "npm-run-all -s clean -p public:build html:build tsc:build i18n:build",
+    "common:build": "npm-run-all -s clean -p public:build html:build tsc:build i18n:build socketioadmin:build",
     "public:build": "webpack --config webpack.config.js",
+    "socketioadmin:build": "mkdir -p dist/socketioadmin/ && cp -r node_modules/@socket.io/admin-ui/ui/dist/* dist/socketioadmin/",
     "html:build": "scripty",
     "tsc:build": "npx tsc",
     "common:start": "node .",
@@ -51,9 +52,13 @@
   "homepage": "https://github.com/JohnXLivingston/bop#readme",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@socket.io/admin-ui": "^0.2.0",
+    "@socket.io/redis-adapter": "^7.0.0",
+    "@socket.io/redis-emitter": "^4.1.0",
     "async": "^3.2.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.3",
     "config": "^3.3.6",
     "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
@@ -80,11 +85,9 @@
     "require-json5": "^1.1.0",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
-    "socket.io": "^2.4.1",
-    "socket.io-emitter": "^3.2.0",
-    "socket.io-redis": "^5.2.0",
+    "socket.io": "^4.2.0",
     "tsconfig-paths": "^3.11.0",
-    "uid2": "^1.0.0",
+    "utf-8-validate": "^5.0.5",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-syslog": "^2.4.4"
@@ -115,11 +118,6 @@
     "@types/nunjucks": "^3.1.5",
     "@types/proper-lockfile": "^4.1.2",
     "@types/redis": "^2.8.31",
-    "@types/socket.io": "^2.1.13",
-    "@types/socket.io-client": "^1.4.36",
-    "@types/socket.io-emitter": "^3.1.0",
-    "@types/socket.io-redis": "^1.0.27",
-    "@types/uid2": "0.0.0",
     "@types/uuid": "^8.3.1",
     "@types/validator": "^13.6.3",
     "@types/winston-syslog": "^2.0.4",
@@ -160,7 +158,7 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
     "scripty": "^2.0.0",
-    "socket.io-client": "^2.4.0",
+    "socket.io-client": "^4.2.0",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
