--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-match": "^1.1.1",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "dependency-cruiser": "^9.26.1",
