--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "description": "Bop Open Planning",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=14.0.0 <15"
   },
   "scripts": {
     "clean": "rimraf dist/*",
@@ -117,7 +117,7 @@
     "@types/js-yaml": "^4.0.3",
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^14.17.12",
+    "@types/node": "^14.17.14",
     "@types/nunjucks": "^3.1.5",
     "@types/proper-lockfile": "^4.1.2",
     "@types/redis": "^2.8.31",
